# test

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: maven.yml
client/: .gitignore  README-ELECTRON.md  package.json
client/public/: electron.js  index.html  manifest.json  preload.js
client/src/: App.js  index.js
client/src/components/: AdminPostForm.jsx  AnimatedButton.jsx  AppRoutes.jsx  AppointmentForm.jsx  AvatarCropModal.jsx  AvatarPreviewModal.jsx  AvatarUpload.jsx  BatchActions.jsx  BlockUserModal.jsx  CheckinModal.jsx  CommentCard.jsx  CommentDetailModal.jsx  CommentReportModal.jsx  Toast.jsx  (+23 more)
database/: docker-compose.yml
database/sqlForLocalTest/: add_profile_privacy.sql  comment_report_migration.sql  complete_init.sql  dropAndCreate.sql  init_expert_120_schedule.sql  init_experts.sql  migrate_expert_schedule.sql  remove_old_schedule_fields.sql  safe_cascade_fix.sql  simplify_cascade.sql  soft_delete_migration.sql  test_appointments.sql  toGetData.sql  update_doctorzhang_role.sql  update_user_120.sql  user_blocks_migration.sql
docs/: ARCHITECTURE.md  CACHE_GUIDE.md  Install.md  QuickIntro.md  STARTUP_GUIDE.md
microservices/bert/: README.md  bert_service.py  requirements.txt
microservices/quick-embedding/: CMakeLists.txt  README.md  build.sh  embedding_server.cc
microservices/quick-embedding/embedding/: embedding.cc
microservices/system_service/: bert.service  embedding.service
server/: .gitignore  pom.xml  test-results.txt
systemd/: embedding.service  mentara-backend.service  mentara-db.service  node.service
(+848 files in other folders)
